Clean up .gitignore and add Next.js TypeScript env file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # === Docker / containers ===
 **/node_modules/
+**/.next/
 **/.cache/
 **/.tmp/
 **/build/
@@ -34,3 +35,8 @@ strapi/strapi-app/public/uploads/
 Thumbs.db
 .vscode/
 .idea/
+
+# Misc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
