--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@
 #   Stop:               docker compose down
 #   Destroy:            docker compose -f docker-compose.yml -f ./dev/docker-compose.dev.yml down -v --remove-orphans
 #   Reset everything:  ./reset.sh
+name: supabase
+
 networks:
   supabase_default:
     external: true
@@ -289,8 +291,7 @@ services:
     ports:
       - 4000:4000
     # Uncomment to use Big Query backend for analytics
-    # volumes:
-    #   - type: bind
+    # volumes: #   - type: bind
     #     source: ${PWD}/gcloud.json
     #     target: /opt/app/rel/logflare/bin/gcloud.json
     #     read_only: true
@@ -337,7 +338,7 @@ services:
       # Initialize the database settings with JWT_SECRET and JWT_EXP
       - ./supabase-project/init/jwt.sql:/docker-entrypoint-initdb.d/init-scripts/99-jwt.sql:Z
       # PGDATA directory is persisted between restarts
-      - ./supabase-project/init/data:/var/lib/postgresql/data:Z
+      - ./supabase-project/data:/var/lib/postgresql/data:Z
       # Changes required for internal supabase data such as _analytics
       - ./supabase-project/init/_supabase.sql:/docker-entrypoint-initdb.d/migrations/97-_supabase.sql:Z
       # Changes required for Analytics support
@@ -354,7 +355,6 @@ services:
       timeout: 5s
       retries: 10
     environment:
-      POSTGRES_HOST: /var/run/postgresql
       PGPORT: ${POSTGRES_PORT}
       POSTGRES_PORT: ${POSTGRES_PORT}
       PGPASSWORD: ${POSTGRES_PASSWORD}
@@ -363,9 +363,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXP: ${JWT_EXPIRY}
-    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf", "-c", "log_min_messages=fatal", # prevents Realtime polling queries from appearing in logs
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf", "-c", "listen_addresses='*'", "-c", "log_min_messages=fatal", # prevents Realtime polling queries from appearing in logs
     ]
-  # Update the DATABASE_URL if you are using an external Postgres database
   supavisor:
     container_name: supabase-pooler
     image: supabase/supavisor:2.5.7
@@ -404,33 +403,31 @@ services:
       POOLER_POOL_MODE: transaction
       DB_POOL_SIZE: ${POOLER_DB_POOL_SIZE}
     command: ["/bin/sh", "-c", "/app/bin/migrate && /app/bin/supavisor eval \"$$(cat /etc/pooler/pooler.exs)\" && /app/bin/server"]
+
   strapi:
-    image: strapi/strapi:latest
+    container_name: strapi-app
+    build:
+      context: ./strapi/strapi-app
+      dockerfile: Dockerfile
     restart: unless-stopped
     depends_on:
       db:
-        condition: service_healthy  # ✅ wait for Supabase DB readiness
+        # Disable this if you are using an external Postgres database
+        condition: service_healthy
     environment:
-      # --- Database ---
+      NODE_ENV: development
       DATABASE_CLIENT: postgres
-      DATABASE_HOST: supabase-db
+      DATABASE_HOST: supabase-db          # internal Docker hostname
       DATABASE_PORT: 5432
       DATABASE_NAME: strapi
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
-      # --- App config ---
-      NODE_ENV: ${NODE_ENV}
-      HOST: 0.0.0.0
-      PORT: 1337
-      APP_KEYS: test1,tyest2,test3,test4 # Replace for production
-      API_TOKEN_SALT: test-apisalt
-      ADMIN_JWT_SECRET: ${JWT_SECRET}
-      JWT_SECRET: ${JWT_SECRET}
-    volumes:
-      - ./strapi/strapi-app:/srv/app
+      APP_KEYS: someRandomAppKey
+      API_TOKEN_SALT: someRandomSalt
+      ADMIN_JWT_SECRET: anotherRandomSecret
+      JWT_SECRET: yetAnotherSecret
     ports:
       - "1337:1337"
-    networks: [supabase_default] # ✅ this is your actual network
-name: supabase
+
 volumes:
   db-config:
