--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -337,7 +337,7 @@ services:
       # Initialize the database settings with JWT_SECRET and JWT_EXP
       - ./supabase-project/init/jwt.sql:/docker-entrypoint-initdb.d/init-scripts/99-jwt.sql:Z
       # PGDATA directory is persisted between restarts
-      - ./supabase-project/init/data:/var/lib/postgresql/data:Z
+      - ./supabase-project/data:/var/lib/postgresql/data:Z
       # Changes required for internal supabase data such as _analytics
       - ./supabase-project/init/_supabase.sql:/docker-entrypoint-initdb.d/migrations/97-_supabase.sql:Z
       # Changes required for Analytics support
